--- a/purchase-advertisement.html
+++ b/purchase-advertisement.html
@@ -40,7 +40,7 @@
 							aria-expanded="false" style="color: rgb(255, 255, 255);">
 							<span class="custom-icon custom-icon-flag-az"></span>
 						</a>
-						<div class="dropdown-menu z-high">
+						<div class="dropdown-menu dropdown-menu-header z-high">
 							<a class="dropdown-item" href="#">Az</a>
 							<a class="dropdown-item" href="#">Rus</a>
 							<a class="dropdown-item" href="#">Eng</a>
@@ -76,15 +76,15 @@
 										<i class="fas fa-user text-purple fs-lg-20"></i>
 									</a>
 									
-									<div class="dropdown-menu dropdown-menu-right">
-										<a href="#" class="dropdown-item">Profil</a>
+									<div class="dropdown-menu dropdown-menu-right ">
+										<a href="./profile.html" class="dropdown-item">Profil</a>
 										<a href="#" class="dropdown-item">Çıxış</a>
 									</div>
 								</li>
 							</ul>
 
 						</div>
-						<div class="col-2">
+						<div class="col-3 d-flex justify-content-end">
 							<div class="hamburger hamburger--spring position-relative z-middle" id="open_menu"
 								style="top: -9px;">
 								<div class="hamburger-box">
@@ -97,68 +97,67 @@
 			</div>
 		</div>
 	</header>
-
 	<div id="mobile_menu" class="bg-purple z-100 position-absolute left-100 w-100 t-5 h-100 top-0 pt-100">
 		<ul class="m-5 list-unstyled">
-			<li class="mt-5 mb-4 ">
-				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+			<li class="mt-5 mb-3 ">
+				<i class="fas fa-route text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Asan nömrə</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
+			<li class="my-3">
+				<i class="fas fa-briefcase text-white mr-3 fs-sm-12 fs-lg-20"></i>
 				<a href="./koporativnomre.html"
-					class="text-decoration-none text-white  my-5 fs-lg-20 fs-sm-18">Korporativ
+					class="text-decoration-none text-white  my-5 fs-lg-20 fs-sm-12">Korporativ
 					nömrə</a>
 			</li>
 			<hr class="bg-light">
-			<li class="my-4">
-				<i class="fas fa-bullhorn text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./campaigns.html"
-					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Kampaniyalar</a>
+			<li class="my-3">
+				<i class="fas fa-bullhorn text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./profile.html"
+					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Kampaniyalar</a>
 			</li>
-			<li class="my-4">
-				<i class="far fa-handshake text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Əməkdaşlıq və digər
+			<li class="my-3">
+				<i class="far fa-handshake text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Əməkdaşlıq və digər
 					məsələlər</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-user-md text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Vakansiyalar</a>
+			<li class="my-3">
+				<i class="fas fa-user-md text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./vacancies.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Vakansiyalar</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-info-circle text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Haqqimizda</a>
+			<li class="my-3">
+				<i class="fas fa-info-circle text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Haqqimizda</a>
 			</li>
 			<hr class="bg-light">
-			<li class="my-4">
-				<i class="fas fa-list-ol text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Satılan nömrələr</a>
+			<li class="my-3">
+				<i class="fas fa-list-ol text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Satılan nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-car text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Bütün avtomobil nömrələri</a>
+			<li class="my-3">
+				<i class="fas fa-car text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Bütün avtomobil nömrələri</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-search text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Axtarılan nömrələr</a>
+			<li class="my-3">
+				<i class="fas fa-search text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Axtarılan nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="far fa-gem text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">VİP nömrələr</a>
+			<li class="my-3">
+				<i class="far fa-gem text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">VİP nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-question text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Qaydalar</a>
+			<li class="my-3">
+				<i class="fas fa-question text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Qaydalar</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-file-signature text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Əlaqə</a>
+			<li class="my-3">
+				<i class="fas fa-file-signature text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Əlaqə</a>
 			</li>
 		</ul>
 	</div>
 
 	<!-- main -->
-	<main class="my-5 container my-5">
+	<main class="container my-5">
 		<div class="row ">
 			<div class="my-4 col-md-3 col-xs-12">
 				<ul class="sidebar-navigation p-0 m-0 list-unstyled position-relative">
@@ -191,8 +190,8 @@
 				<form class="">
 					<div class="row  d-flex justify-content-between align-items-center ">
 						<div class="col-10 serch-table">
-							<div class="row d-flex justify-content-around align-items-center my-3">
-								<div class="prefiks my-2 col-lg-3 col-md-6 col-xs-6">
+							<div class="row d-flex   align-items-center my-3">
+								<div class="prefiks my-2 col-lg-3 col-md-6 col-xs-6 d-flex justify-content-start">
 									<select name="search_prefix[]" id="bahman" data-selected-text-format="count"
 										data-live-search="true" tabindex="-98" class="shadow-sm b-0 rounded p-2"
 										style="width: 100%;background-color: white;">
@@ -298,9 +297,6 @@
 					<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
 						style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
 				</form>
-
-
-
 				<div class="card card-animate my-5 ">
 					<div class="card-body">
 						<blockquote class="blockquote ">
@@ -322,47 +318,47 @@
 	</main>
 
 	<!-- footer -->
-	<footer class="bg-black  pb-4">
+	
+	<footer id="footer" class="bg-black">
 		<div class="container-lg">
 			<div class="row pt-5 pb-4">
 				<div class="col-lg-4 justify-content-start pt-4">
 					<ul>
 						<li><a href="#" class="text-white font-weight-bold text-decoration-none">www.nömrə.net</a></li>
-						<li class="dropdown d-sm-none align-items-center my-4 d-md-flex">
-							<a class="dropdown-toggle text-decoration-none text-white" data-toggle="dropdown" href="#"
-								aria-expanded="false"><img src="./img/azerbaijan.png" alt="" style="width: 20px;"
-									class="">
-							</a>
-							<ul class="dropdown-menu px-2 dropdown-user">
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Az</a>
-								</li>
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Rus</a>
-								</li>
+						<li class=" d-sm-none align-items-center my-4 d-md-flex">
+							<div class="btn-group">
+								<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false" style="color: white;">
+									<span class="custom-icon custom-icon-flag-az"></span>
+								</a>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" href="#">Az</a>
+									<a class="dropdown-item" href="#">Rus</a>
+									<a class="dropdown-item" href="#">Eng</a>
 
-							</ul>
+								</div>
+							</div>
 						</li>
 					</ul>
 
 				</div>
 				<div class="col-lg-4 pt-4">
-					<ul class="">
+					<ul class="" id="contact">
 						<li class="d-flex align-items-center">
-							<i class="fas fa-phone-alt mr-1 font-weight-lighter text-white "></i>
-							<a href="#" class="text-white text-decoration-none font-weight-lighter">+994502210176</a>
+							<i class="fas fa-phone-alt mr-1 font-weight-lighter fs-sm-12 text-white "></i>
+							<a href="#" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994502210176</a>
 						</li>
 						<li class="d-flex align-items-center">
-							<i class="fab fa-whatsapp mr-2 font-weight-lighter text-white"></i>
-							<a href="" class="text-white text-decoration-none font-weight-lighter">+994516606000</a>
+							<i class="fab fa-whatsapp mr-2 font-weight-lighter fs-sm-12 text-white"></i>
+							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994516606000</a>
 						</li>
 						<li class="d-flex align-items-center">
-							<i class="far fa-calendar mr-2 font-weight-lighter text-white"></i>
-							<a href="" class="text-white text-decoration-none font-weight-lighter">994.55.123.67</a>
+							<i class="far fa-calendar mr-2 font-weight-lighter fs-sm-12 text-white"></i>
+							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">994.55.123.67</a>
 						</li>
 						<li class="d-flex align-items-center">
-							<i class="far fa-envelope mr-2 font-weight-lighter text-white"></i>
-							<a href="" class="text-white text-decoration-none font-weight-lighter">info@nomre.net</a>
+							<i class="far fa-envelope mr-2 font-weight-lighter fs-sm-12 text-white"></i>
+							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">info@nomre.net</a>
 						</li>
 					</ul>
 				</div>
