--- a/sales-advertisement.html
+++ b/sales-advertisement.html
@@ -28,19 +28,19 @@
 							<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
 						</div>
 						<div class="col-xs-12 col-md-5 ">
-										<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
-					<span class="fs-lg-11 text-white font-weight-lighter">info@nomre.net</span>
+							<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
+							<span class="fs-lg-11 text-white font-weight-lighter">info@nomre.net</span>
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="col-4 d-flex justify-content-end">
 					<div class="btn-group mb-3 ">
 						<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
 							aria-expanded="false" style="color: rgb(255, 255, 255);">
 							<span class="custom-icon custom-icon-flag-az"></span>
 						</a>
-						<div class="dropdown-menu z-high">
+						<div class="dropdown-menu dropdown-menu-header z-high">
 							<a class="dropdown-item" href="#">Az</a>
 							<a class="dropdown-item" href="#">Rus</a>
 							<a class="dropdown-item" href="#">Eng</a>
@@ -71,20 +71,20 @@
 						<div class="col-2 d-flex justify-content-center">
 							<ul class="nav py-profile justify-content-end">
 								<li class="nav-item dropdown">
-									<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle1"
-										role="button" aria-haspopup="true" aria-expanded="false" >
+									<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle1" role="button"
+										aria-haspopup="true" aria-expanded="false">
 										<i class="fas fa-user text-purple fs-lg-20"></i>
 									</a>
-									
+
 									<div class="dropdown-menu dropdown-menu-right">
-										<a href="#" class="dropdown-item">Profil</a>
+										<a href="./profile.html" class="dropdown-item">Profil</a>
 										<a href="#" class="dropdown-item">Çıxış</a>
 									</div>
 								</li>
 							</ul>
 
 						</div>
-						<div class="col-2">
+						<div class="col-3">
 							<div class="hamburger hamburger--spring position-relative z-middle" id="open_menu"
 								style="top: -9px;">
 								<div class="hamburger-box">
@@ -99,65 +99,66 @@
 	</header>
 	<div id="mobile_menu" class="bg-purple z-100 position-absolute left-100 w-100 t-5 h-100 top-0 pt-100">
 		<ul class="m-5 list-unstyled">
-			<li class="mt-5 mb-4 ">
-				<i class="fas fa-route text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Asan nömrə</a>
+			<li class="mt-5 mb-3 ">
+				<i class="fas fa-route text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./asannomre.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Asan nömrə</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-briefcase text-white mr-3 fs-sm-18 fs-lg-20"></i>
+			<li class="my-3">
+				<i class="fas fa-briefcase text-white mr-3 fs-sm-12 fs-lg-20"></i>
 				<a href="./koporativnomre.html"
-					class="text-decoration-none text-white  my-5 fs-lg-20 fs-sm-18">Korporativ
+					class="text-decoration-none text-white  my-5 fs-lg-20 fs-sm-12">Korporativ
 					nömrə</a>
 			</li>
 			<hr class="bg-light">
-			<li class="my-4">
-				<i class="fas fa-bullhorn text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="./campaigns.html"
-					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Kampaniyalar</a>
+			<li class="my-3">
+				<i class="fas fa-bullhorn text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./profile.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Kampaniyalar</a>
 			</li>
-			<li class="my-4">
-				<i class="far fa-handshake text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Əməkdaşlıq və digər
+			<li class="my-3">
+				<i class="far fa-handshake text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Əməkdaşlıq və digər
 					məsələlər</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-user-md text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Vakansiyalar</a>
+			<li class="my-3">
+				<i class="fas fa-user-md text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="./vacancies.html"
+					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Vakansiyalar</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-info-circle text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Haqqimizda</a>
+			<li class="my-3">
+				<i class="fas fa-info-circle text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Haqqimizda</a>
 			</li>
 			<hr class="bg-light">
-			<li class="my-4">
-				<i class="fas fa-list-ol text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Satılan nömrələr</a>
+			<li class="my-3">
+				<i class="fas fa-list-ol text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Satılan nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-car text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Bütün avtomobil nömrələri</a>
+			<li class="my-3">
+				<i class="fas fa-car text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Bütün avtomobil nömrələri</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-search text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Axtarılan nömrələr</a>
+			<li class="my-3">
+				<i class="fas fa-search text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Axtarılan nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="far fa-gem text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">VİP nömrələr</a>
+			<li class="my-3">
+				<i class="far fa-gem text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">VİP nömrələr</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-question text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Qaydalar</a>
+			<li class="my-3">
+				<i class="fas fa-question text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Qaydalar</a>
 			</li>
-			<li class="my-4">
-				<i class="fas fa-file-signature text-white mr-3 fs-sm-18 fs-lg-20"></i>
-				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-18">Əlaqə</a>
+			<li class="my-3">
+				<i class="fas fa-file-signature text-white mr-3 fs-sm-12 fs-lg-20"></i>
+				<a href="#" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Əlaqə</a>
 			</li>
 		</ul>
 	</div>
 
+
 	<!-- main -->
-	<main class="my-5 h-100 container">
+	<main class="my-5 container">
 		<div class="row ">
 			<div class="my-4 col-md-3 col-xs-12">
 				<ul class="sidebar-navigation p-0 m-0 list-unstyled position-relative">
@@ -174,11 +175,15 @@
 					</li>
 					<li class="position-relative w-100"><a href="./published.html" class="text-dark d-block">Dərc
 							olunmuş</a></li>
-					<li class="position-relative w-100"><a href="./checking.html" class="text-dark d-block">Yoxlanılır</a></li>
-					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a></li>
-					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./checking.html"
+							class="text-dark d-block">Yoxlanılır</a></li>
+					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a>
+					</li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc
+							olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html"
+							class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 
@@ -208,25 +213,21 @@
 						</div>
 					</div>
 					<div class="row mt-4 d-flex justify-content-between">
-						<div class="col-md-5 col-xs-12 p-0">
-							<form action="">
-								<div class="form-group">
-									<input type="email" name="email" class="form-control" aria-describedby="emailHelp"
-										placeholder="Email" value="aa@s.com">
-								</div>
-							</form>
+						<div class="col-md-5 col-xs-12">
+							<div class="form-group">
+								<input type="email" name="email" class="form-control" aria-describedby="emailHelp"
+									placeholder="Email" value="aa@s.com">
+							</div>
 						</div>
-						<div class="col-md-5 col-xs-12 p-0">
-							<form action="">
-								<div class="form-group">
-									<input type="text" class="form-control" name="text" placeholder="Ad" value="Ad">
-								</div>
-							</form>
+						<div class="col-md-5 col-xs-12">
+							<div class="form-group">
+								<input type="text" class="form-control" name="text" placeholder="Ad" value="Ad">
+							</div>
 						</div>
 					</div>
-					<div class="row d-flex justify-content-between">
-						<div class="col-2 p-0 m-0">
-							<select class="form-control w-100">
+					<div class="row mb-4 d-flex justify-content-between">
+						<div class="col-4 ">
+							<select class="form-control ">
 								<option>Mobil operator</option>
 								<option> Azercell</option>
 								<option>Bakcell</option>
@@ -241,31 +242,32 @@
 
 							</select>
 						</div>
-						<div class="col-2 p-0 m-0">
-							<select class="form-control p-0 w-100">
+						<div class="col-2">
+							<select class="form-control ">
 								<option></option>
-
 							</select>
 						</div>
-						<div class="col-2 p-0 m-0">
-							<div class="form-group w-100">
-								<input type="tel" class="form-control" placeholder="Əlaqə nömrəsi" value="" name="tel">
+						<div class="col-2 ">
+							<div class="form-group">
+								<input type="number" class="form-control" placeholder="Əlaqə ömrəsi" value="" name="number">
 							</div>
 						</div>
-						<div class="col-2 p-0 m-0">
+						<div class="col-2 ">
 							<div class="form-group">
 								<input type="number" class="form-control" placeholder="Qiymət" value="" name="number">
 							</div>
 						</div>
-						<div class="col-1 input-group-btn">
-							<button class="btn btn-outline-success" type="button" onclick="education_fields();"><i
-									class="fas fa-plus"></i></button>
+						<div class="col-2  input-group-btn">
+							<button class="btn btn-outline-success w-100" type="button" onclick="education_fields();">
+								<i class="fas fa-plus"></i></button>
+						</div>
+						<div id="education_fields">
 						</div>
 					</div>
-					<div id="education_fields">
+					<div class="col-xs-12">
+						<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
+							style="border: 1px solid #d2acee; width: 150px;">Redakte et</button>
 					</div>
-					<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
-						style="border: 1px solid #d2acee; width: 150px;">Redakte et</button>
 				</form>
 
 				<div class="card card-animate my-5 ">
@@ -286,32 +288,31 @@
 	</main>
 
 	<!-- footer -->
-	<footer class="bg-black  pb-4">
+	<footer id="footer" class="bg-black pb-4">
 		<div class="container-lg">
 			<div class="row pt-5 pb-4">
 				<div class="col-lg-4 justify-content-start pt-4">
 					<ul>
 						<li><a href="#" class="text-white font-weight-bold text-decoration-none">www.nömrə.net</a></li>
-						<li class="dropdown d-sm-none align-items-center my-4 d-md-flex">
-							<a class="dropdown-toggle text-decoration-none text-white" data-toggle="dropdown" href="#"
-								aria-expanded="false"><img src="./img/azerbaijan.png" alt="" style="width: 20px;"
-									class="">
-							</a>
-							<ul class="dropdown-menu px-2 dropdown-user">
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Az</a>
-								</li>
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Rus</a>
-								</li>
+						<li class=" d-sm-none align-items-center my-4 d-md-flex">
+							<div class="btn-group">
+								<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false" style="color: white;">
+									<span class="custom-icon custom-icon-flag-az"></span>
+								</a>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" href="#">Az</a>
+									<a class="dropdown-item" href="#">Rus</a>
+									<a class="dropdown-item" href="#">Eng</a>
 
-							</ul>
+								</div>
+							</div>
 						</li>
 					</ul>
 
 				</div>
 				<div class="col-lg-4 pt-4">
-					<ul class="">
+					<ul class="" id="contact">
 						<li class="d-flex align-items-center">
 							<i class="fas fa-phone-alt mr-1 font-weight-lighter text-white "></i>
 							<a href="#" class="text-white text-decoration-none font-weight-lighter">+994502210176</a>
@@ -422,7 +423,7 @@
 			var divtest = document.createElement("div");
 			divtest.setAttribute("class", "form-group removeclass" + room);
 			var rdiv = 'removeclass' + room;
-			divtest.innerHTML = '<div class="row d-flex justify-content-between"><div class="col-2 p-0 m-0"><select class="form-control w-100"><option>Mobil operator</option><option> Azercell</option><option>Bakcell</option><option>Nar</option><option>Naxtel</option><option>BTRIB</option><option>Gürcüstan</option><option>Rusiya</option><option>Türkiyə</option><option>Paket nömrələr</option><option>Maşın nömrələri</option></select></div><div class="col-2 p-0 m-0"><select class="form-control p-0 w-100">><option></option></select></div><div class="col-2 p-0 m-0"><div class="form-group w-100"><input type="tel" class="form-control" placeholder="Əlaqə nömrəsi" value="" name="tel"></div></div><div class="col-2 p-0 m-0"><div class="form-group"><input type="number" class="form-control" placeholder="Qiymət" value="" name="number"></div></div><div class="col-1 input-group-btn"><button class="btn btn-danger" type="button" onclick="remove_education_fields(' + room + ');"> <i class="fas fa-minus"></i> </button></div> </div></div></div></div><div class="clear"></div></div>';
+			divtest.innerHTML = '<div class="row d-flex px-3 justify-content-between"><div class="col-2 p-0 m-0"><select class="form-control w-100"><option>Mobil operator</option><option> Azercell</option><option>Bakcell</option><option>Nar</option><option>Naxtel</option><option>BTRIB</option><option>Gürcüstan</option><option>Rusiya</option><option>Türkiyə</option><option>Paket nömrələr</option><option>Maşın nömrələri</option></select></div><div class="col-2 p-0 m-0"><select class="form-control p-0 w-100">><option></option></select></div><div class="col-2 p-0 m-0"><div class="form-group w-100"><input type="tel" class="form-control" placeholder="Əlaqə nömrəsi" value="" name="tel"></div></div><div class="col-2 p-0 m-0"><div class="form-group"><input type="number" class="form-control" placeholder="Qiymət" value="" name="number"></div></div><div class="col-1 input-group-btn"><button class="btn btn-danger" type="button" onclick="remove_education_fields(' + room + ');"> <i class="fas fa-minus"></i> </button></div> </div></div></div></div><div class="clear"></div></div>';
 
 			objTo.appendChild(divtest)
 		}
