--- a/vacancies.html
+++ b/vacancies.html
@@ -152,159 +152,17 @@
 			</li>
 		</ul>
 	</div>
-	<div class="bg-search-purple">
-		<div class="container">
-			<div class="row  d-flex justify-content-around align-items-center ">
-				<div class="col-10 serch-table">
-					<div class="row d-flex justify-content-around align-items-center my-3">
-						<div class="dropdown_td my-2 col-lg-2 col-md-6 col-xs-6 btn-group bootstrap-select">
-							<select id="how_search" class="selectpicker shadow rounded p-2 " name="search_type"
-								tabindex="-98" style="width: 100%; background-color: white;">
-								<option selected="" value="1">Satılır</option>
-								array(0) {
-								}
-								<option value="0">Olsa alaram</option>
-							</select>
-						</div>
-						<div class="prefiks my-2 col-lg-2 col-md-6 col-xs-6">
-							<select name="search_prefix[]" id="bahman" data-selected-text-format="count"
-								data-live-search="true" tabindex="-98" class="shadow rounded p-2"
-								style="width: 100%;background-color: white;">
-								<optgroup class="selectpicker-s" label="Bütün operatorlar">
-									<option value="all" selected="selected">Prefiks </option>
-								</optgroup>
-
-
-								<optgroup class="selectpicker-s" label="Azercell">
-									<option value="1">50</option>
-									<option value="2">51</option>
-									<option value="3">10</option>
-									<option value="1 / 2 / 3">
-										50 / 51 / 10
-									</option>
-								</optgroup>
-
-								<optgroup class="selectpicker-s" label="Azercell">
-									<option value="1">50</option>
-									<option value="2">51</option>
-									<option value="3">10</option>
-									<option value="1 / 2 / 3">
-										50 / 51 / 10
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Bakcell">
-									<option value="4">55</option>
-									<option value="5">99</option>
-									<option value="4 / 5">
-										55 / 99
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Nar">
-									<option value="9">70</option>
-									<option value="10">77</option>
-									<option value="9 / 10">
-										70 / 77
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Naxtel">
-									<option value="6">60</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="BTRİB">
-									<option value="12">12</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Gürcüstan">
-									<option value="17">577</option>
-									<option value="18">555</option>
-									<option value="17 / 18">
-										577 / 555
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Rusiya">
-									<option value="19">903</option>
-									<option value="20">905</option>
-									<option value="19 / 20">
-										903 / 905
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Türkiyə">
-									<option value="14">532</option>
-									<option value="15">53</option>
-									<option value="16">56</option>
-									<option value="14 / 15 / 16">
-										532 / 53 / 56
-									</option>
-								</optgroup>
-								<optgroup class="selectpicker-s" label="Paket nömrələr">
-									<option value="21">Çoxlu prefiks</option>
-								</optgroup>
-								<option class="car" value="car">Maşın</option>
-							</select>
-						</div>
-						<div id="number_search" class="my-2 col-lg-5 col-md-10 d-flex justify-content-between">
-							<input type="tel" id="number1" name="number1" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 1);">
-							<input type="tel" id="number2" name="number2" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 2);">
-							<input type="tel" id="number3" name="number3" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 3);">
-							<input type="tel" id="number4" name="number4" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 4);">
-							<input type="tel" id="number5" name="number5" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 5);">
-							<input type="tel" id="number6" name="number6" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 6);">
-							<input type="tel" id="number7" name="number7" pattern="[0-9]*" value=""
-								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 7);">
-						</div>
-						<div class=" my-2 col-lg-1 col-md-6 col-xs-6 w-100">
-							<button type="submit" onclick="alertFunction()"
-								class="btn  bg-white w-100 shadow tap-hover">Tap</button>
-						</div>
-						<div class=" my-2 col-lg-1 col-md-6 col-xs-6 ">
-							<a href="#" class=" btn  w-100 bg-white shadow sil-hover">Sil</a>
-						</div>
-					</div>
-				</div>
+	<!-- main -->
+	<main class="container h-60vh">
+		<div class="row">
+			<div class="col">
+				<p class="my-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime facilis provident sint eaque, dicta temporibus odit quo laudantium ab minima magni deserunt repudiandae eius totam cum in explicabo molestiae et!</p>
 			</div>
 		</div>
-	</div>
 
-	<!-- main -->
-
-	<main class="container my-5 h-60vh">
-		<h2 class="text-purple">Azercell</h2>
-
-		<form action="">
-			<div class="row my-4">
-				<div class="col-6">
-					<select class="browser-default custom-select">
-						<option selected>Reklamın növünü seçin</option>
-						<option value="1">Top</option>
-						<option value="2">Vip</option>
-						<option value="3">İrəli çək</option>
-					</select>
-				</div>
-				<div class="col-6">
-					<select class="browser-default custom-select" disabled>
-						<option selected>Müddəti seçin</option>
-						<option value="1"></option>
-					</select>
-				</div>
-			</div>
-			<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
-				style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
-		</form>
 	</main>
 
 	<!-- footer -->
-
 	<footer id="footer" class="bg-black">
 		<div class="container-lg">
 			<div class="row pt-5 pb-4">
@@ -393,7 +251,6 @@
 		</div>
 	</footer>
 
-
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
@@ -403,17 +260,10 @@
 		function alertFunction() {
 			setTimeout(function () { alert("Axtarış"); }, 1000);
 		}
-
-		/*let mobile_menu = document.querySelector('#mobile_menu')
-		document.getElementById('open_menu').addEventListener('click', function (e) {
-			mobile_menu.classList.toggle('left-0')
-			e.target.classList.toggle('fa-times')
-		})*/
 		$('#open_menu').click(function () {
-			$('#mobile_menu').toggleClass('left-0')
+			$('#mobile_menu').toggleClass('left-0 h-120vh')
 			$('#open_menu').toggleClass('is-active')
 		})
-
 		//number-search
 		function keyPr(ev, ind) {
 			//48 - 0
@@ -438,25 +288,10 @@
 				document.getElementById("number" + ind).value = '';
 
 			}
+
 			return false;
 		}
 
-		const allToLoginButtons = $('.modal-chooser-button');
-		if (allToLoginButtons) {
-			allToLoginButtons.each((index, el) => {
-				$(el).on("click", (ev) => {
-					const _currentModal = $(ev.target).closest('.modal');
-					console.log(">> ", _currentModal);
-					_currentModal.modal("hide");
-				});
-			});
-		}
-		
-		$("#clickbutton").click(function () {
-			const me = $(this);
-			const myModal = me.closest('.modal');
-			myModal.modal("hide");
-		});
 	</script>
 </body>
 
